[workspace]
resolver = "3"
members = ["ordr_core", "ordr_macros"]

[workspace.lints.clippy]
pedantic = "warn"

[package]
name = "ordr"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casperin/ordr"
description = "Executes and keeps track of a set of interdependent functions"

[dependencies]
ordr_core = "0.2.0"
ordr_macros = "0.2.0"

[dev-dependencies]
futures = "0.3.31"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trybuild = "1.0.104"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
