[package]
name = "ordr"
version = "0.1.0"
edition = "2024"

[lib]
path = "ordr.rs"

[dependencies]
inventory = "0.3.20"
paste = "1.0.15"
rand = "0.9.1"
ordr_core = { path = "../ordr_core" }
ordr_macros = { path = "../ordr_macros" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
futures = "0.3.31"
tracing-subscriber = "0.3.19"
trybuild = "1.0.104"
serde = { version = "1.0.219", features = ["derive"] }
