[package]
name = "ordr"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casperin/ordr"
description = "Executes and keeps track of a set of interdependent functions"

[lib]
path = "ordr.rs"

[dependencies]
# ordr_core = "0.1.0"
# ordr_macros = "0.1.0"
ordr_core = { path = "../ordr_core" }
ordr_macros = { path = "../ordr_macros" }

[dev-dependencies]
futures = "0.3.31"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trybuild = "1.0.104"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
