[package]
name = "ordr_core"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casperin/ordr"
description = "The core part of `ordr` (which is probably the one you want)."

[lib]
path = "ordr_core.rs"

[lints]
workspace = true

[dependencies]
serde = "1"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "sync", "rt", "time"] }
tokio-util = "0.7.15"
tracing = "0.1"
