[package]
name = "ordr_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
path = "ordr_macros.rs"

[lints]
workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
ordr_core = { path = "../ordr_core" }

[dev-dependencies]
proc-macro2 = "1.0.95"
trybuild = "1.0.104"
