[package]
name = "ordr_macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casperin/ordr"
description = "The macros for `ordr` (which is probably the one you want)."

[lib]
proc-macro = true
path = "ordr_macros.rs"

[lints]
workspace = true

[dependencies]
ordr_core = "0.1.0"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[dev-dependencies]
proc-macro2 = "1.0.95"
trybuild = "1.0.104"
